fixed spacing for nav objects

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4134,6 +4134,11 @@ input, select, textarea {
 						margin: 0;
 						padding: 0;
 					}
+		/* nav */
+		nav, a{
+			font-size: 10px;
+			color: #e44c65;
+		}
 
 	}
 	/* Estevan's Css */
@@ -4157,6 +4162,13 @@ input, select, textarea {
 nav, a{
 	font-size: 20px;
 	color: #e44c65;
+}
+
+@media screen and (max-width: 480px) {
+	nav, a{
+		font-size: 14px;
+		color: #e44c65;
+	}
 }
 .about-click:first-child{
 	font-size: 15px;
